# Celestia-1

./: .gitignore  AUTHORS  CMakeLists.txt  devguide.txt
app/: CMakeLists.txt
app/resources/: resources.qrc
app/src/: CelestiaVrApplication.cpp  CelestiaVrApplication.h  CelestiaWindow.cpp  CelestiaWindow.h  CloseEventFilter.cpp  CloseEventFilter.h  Logging.cpp  Logging.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
cmake/: compiler.cmake
cmake/macros/: DependLibraries.cmake  PackageLibrariesForDeployment.cmake  TargetCspice.cmake  TargetEigen.cmake  TargetQt.cmake
cmake/templates/: FixupBundlePostBuild.cmake.in
libraries/: CMakeLists.txt
libraries/celapp/: CMakeLists.txt
libraries/celastro/: CMakeLists.txt
libraries/celengine/: CMakeLists.txt
libraries/celephem/: CMakeLists.txt
libraries/celmath/: CMakeLists.txt
libraries/celmodel/: CMakeLists.txt
libraries/celutil/: CMakeLists.txt
libraries/vks/: CMakeLists.txt
libraries/xrs/: CMakeLists.txt
resources/shaders/: camera.h  skygrid.frag  skygrid.vert  stars.frag  stars.vert
save/celengine/: cmdparser.cpp  cmdparser.h  command.cpp  command.h  dds.cpp  execenv.h  execution.h  glshader.h  image.cpp  overlay.cpp  overlay.h  particlesystem.cpp  particlesystem.h  particlesystemfile.cpp  regcombine.h  rendcontext.h  render.h  renderglsl.h  virtualtex.h
src/: CMakeLists.txt
src/celmodel/: CMakeLists.txt  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  modelfile.cpp  modelfile.h
src/celutil/: CMakeLists.txt  basictypes.h  glm.hpp  storage.cpp  storage.hpp
(+215 files in other folders)
